# findata-dq-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pipeline.md  pyproject.toml  requirements-dev.txt  requirements.txt  ~$notes.docx
.github/workflows/: ci.yml
api/: main.py
api/routers/: validate.py
api/schemas/: validate.py
dashboard/: app.py
findata_dq/: __init__.py
findata_dq/ai/: __init__.py  anomaly_detector.py  remediation.py
findata_dq/dimensions/: __init__.py  accuracy.py  base.py  business_rules.py  cohesion.py  collection.py  completeness.py  conformity.py  congruence.py  fairness.py  model_drift.py  precision.py  privacy.py  timeliness.py
findata_dq/models/: __init__.py  ai_governance.py  dq_result.py  insurance.py  operational_risk.py  scorecard.py  security.py
findata_dq/pipeline/: __init__.py  orchestrator.py
findata_dq/tools/: __init__.py
findata_dq/utils/: __init__.py
tests/: conftest.py
tests/fixtures/: access_logs.csv  claims_fraud.csv  generate_fixtures.py  model_metadata.csv  policies_invalid.csv  policies_valid.csv
tests/unit/test_ai/: test_anomaly_detector.py  test_remediation.py
tests/unit/test_api/: test_endpoints.py
tests/unit/test_dimensions/: test_accuracy.py  test_business_rules.py  test_cohesion.py  test_collection.py  test_completeness.py  test_conformity.py  test_congruence.py  test_fairness.py  test_model_drift.py  test_precision.py  test_privacy.py  test_timeliness.py
tests/unit/test_pipeline/: test_orchestrator.py
