[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "findata-dq-engine"
version = "0.1.0"
description = "Financial & Insurance Data Quality Engine — Buzzelli Extended (12 dimensions)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Dia" }]
keywords = ["data-quality", "insurance", "mdm", "buzzelli", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.40.0",
    "plotly>=5.22.0",
    "faker>=25.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]

[project.scripts]
findata-dq = "findata_dq.pipeline.orchestrator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["findata_dq*", "api*", "dashboard*"]

# ─── Ruff (linting) ───────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ─── Mypy (type checking) ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=findata_dq --cov-report=term-missing --cov-report=xml"

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["findata_dq"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
